Fix Tiny REST DrugMention and UMLS JSON crashes.
Configure DrugMentionAnnotator with a Sentence window, harden null request/UMLS fields, and fall back specialty packs to ICU so /service/process no longer returns 500s.

Co-authored-by: Cursor <cursoragent@cursor.com>